--- a/src/Cong.html
+++ b/src/Cong.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 <h1>Cong</h1>
-<p>This is my notes for you Cong:</p>
+<p>Start from the basics working towards - commits, tests, deploy and running in the most basic app first. 
+    Then once you have something, you can build in complexity one by one, which will help in identifying where there are issues.  </p>
 </body>
 </html>
