--- a/src/Han.html
+++ b/src/Han.html
@@ -1,6 +1,8 @@
 <html>
 <body>
 <h1>Han</h1>
-<p>These are my notes for you Han</p>
+<p>Start from the basics working towards - commits, tests, deploy and running in the most basic app first. 
+    Then once you have something, you can build in complexity one by one, which will help in identifying where there are issues.    
+</p>
 </body>
 </html>
