--- a/src/homepage.html
+++ b/src/homepage.html
@@ -13,6 +13,11 @@ Nodejs<br>
 Should: <a href="https://github.com/shouldjs/should.js"> https://github.com/shouldjs/should.js</a><br>
 For deploying nodejs to heroku see: <a href="https://www.heroku.com/nodejs">https://www.heroku.com/nodejs</a><br>
 we need a templating library. react? Haml?
-   </p>
+</p>
+<p>
+    Some coding challenges with auto checks. I am liking edabits at the moment. 
+    <a href="https://www.freecodecamp.org/news/the-10-most-popular-coding-challenge-websites-of-2016-fb8a5672d22f/"> https://www.freecodecamp.org/news/the-10-most-popular-coding-challenge-websites-of-2016-fb8a5672d22f/</a><br>
+    <a href="https://edabit.com/challenges">https://edabit.com/challenges</a>
+</p>   
 </body>
 </html>
