--- a/src/homepage.html
+++ b/src/homepage.html
@@ -4,8 +4,9 @@
 <a href="/Han.html">Han here are notes for you</a><br>
 <a href="/Cong.html">Cong here are notes for you</a><br>
 <a href="/Yutong.html">Yutong here are notes for you</a><br>
+
 <p> things to setup:
-    Github<br>
+    Github<br><a href="/git-bash-notes.html">Git notes from Cong</a><br>
 Github desktop<br>
 Visual studio code<br>
 Mocha: <a href="https://mochajs.org/#installation"> https://mochajs.org/#installation</a><br>
