Changing to sample website

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -1,9 +1,16 @@
 <html>
 <body>
 <h1>Home</h1>
-<a href="/Han.html">Han here are notes for you</a><br>
-<a href="/Cong.html">Cong here are notes for you</a><br>
-<a href="/Yutong.html">Yutong here are notes for you</a><br>
+<a href="/login.html">Login</a><br>
+<a href="/signup.html">Sign up</a><br>
+
+<p>
+    impactful landing frame
+How it works	
+FAQ	
+Testimonials	
+help
+</p>
 
 <p> things to setup:
     Github<br><a href="/git-bash-notes.html">Git notes from Cong</a><br>
@@ -20,5 +27,24 @@ we need a templating library. react? Haml?
     <a href="https://www.freecodecamp.org/news/the-10-most-popular-coding-challenge-websites-of-2016-fb8a5672d22f/"> https://www.freecodecamp.org/news/the-10-most-popular-coding-challenge-websites-of-2016-fb8a5672d22f/</a><br>
     <a href="https://edabit.com/challenges">https://edabit.com/challenges</a>
 </p>   
+<p>
+    https://docs.github.com/en/github/building-a-strong-community/manually-creating-a-single-issue-template-for-your-repository
+    https://guides.github.com/features/mastering-markdown/
+</p>
+
+<p>
+
+1b	Homepage	Authenticated user
+5	My account	Authenticated user
+6	My details	Authenticated user
+7	password reset	Authenticated user
+8	product view	Authenticated user
+9	Purchase	Authenticated user
+10	my credits	Authenticated user
+11	my products	Authenticated user
+12a	Gift - app?	Authenticated user
+
+</p>
+
 </body>
 </html>
