navigation basics- unauthenticated

--- a/src/login.html
+++ b/src/login.html
@@ -10,5 +10,6 @@
     </form>
     <a href="/signup.html">Sign up</a><br>
     <a href="/passwordrecovery.html">Password Recovery</a><br>
+    <a href="/">home</a><br>
 </body>
 </html>
