--- a/src/passwordrecovery.html
+++ b/src/passwordrecovery.html
@@ -5,6 +5,7 @@
     <label for="username">Username:</label>
     <input type="text" id="username" name="username"><br><br>
     <input type="submit" value="Submit">
+    <a href="/">home</a><br>
 </form>
 </body>
 </html>
