--- a/src/signup.html
+++ b/src/signup.html
@@ -1,7 +1,22 @@
 <html>
 <body>
-<h1>Yutong</h1>
-<p>Start from the basics working towards - commits, tests, deploy and running in the most basic app first. 
-    Then once you have something, you can build in complexity one by one, which will help in identifying where there are issues.  </p>
+    <form action="/signup.php">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username"><br><br>
+        <label for="password">Password:</label>
+        <input type="text" id="password" name="password"><br><br>
+        <label for="firstname">First Name:</label>
+        <input type="text" id="firstname" name="firstname"><br><br>
+        <label for="surname">Surname:</label>
+        <input type="text" id="surname" name="surname"><br><br>
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email"><br><br>
+        <label for="address">Address:</label>
+        <input type="text" id="address" name="address"><br><br>
+        <label for="phonenum">Phone Number:</label>
+        <input type="text" id="phonenum" name="phonenum"><br><br>
+        <input type="submit" value="Submit">
+    </form>
+    <a href="/">home</a><br>
 </body>
 </html>
